force-app/main/default/objects/Funding_Award__c/Funding_Award__c.object-meta.xml
<CustomObject>
    <label>Funding Award</label>
    <pluralLabel>Funding Awards</pluralLabel>
    <description>Awarded grants with financial details</description>
    <nameField>
        <label>Award Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>