force-app/main/default/objects/Funding_Award__c/fields/Award_Id__c.field-meta.xml
<CustomField>
    <fullName>Award_Id__c</fullName>
    <label>Award ID</label>
    <type>Text</type>
    <length>20</length>
    <externalId>true</externalId>
    <description>Unique identifier for import (e.g. AW-001)</description>
</CustomField>