force-app/main/default/objects/Funding_Award__c/fields/Award_Number__c.field-meta.xml
<CustomField>
    <fullName>Award_Number__c</fullName>
    <label>Award Number</label>
    <type>Text</type>
    <length>100</length>
</CustomField>