force-app/main/default/objects/Funding_Award__c/fields/Award_Type__c.field-meta.xml
<CustomField>
    <fullName>Award_Type__c</fullName>
    <label>Award Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>