force-app/main/default/objects/Funding_Award__c/fields/CFDA_Number__c.field-meta.xml
<CustomField>
    <fullName>CFDA_Number__c</fullName>
    <label>CFDA Number</label>
    <type>Text</type>
    <length>20</length>
    <description>Federal Catalog of Domestic Assistance</description>
</CustomField>