force-app/main/default/objects/Funding_Award__c/fields/Direct_Costs__c.field-meta.xml
<CustomField>
    <fullName>Direct_Costs__c</fullName>
    <label>Direct Costs</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>