force-app/main/default/objects/Funding_Award__c/fields/Indirect_Costs__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Costs__c</fullName>
    <label>Indirect Costs</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>