force-app/main/default/objects/Funding_Award__c/fields/Individual_Application__c.field-meta.xml
<CustomField>
    <fullName>Individual_Application__c</fullName>
    <label>Individual Application</label>
    <type>Lookup</type>
    <referenceTo>Individual_Application__c</referenceTo>
    <relationshipLabel>Funding Awards</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional - institutional awards may not have an application</description>
</CustomField>