force-app/main/default/objects/Funding_Award__c/fields/Prime_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Prime_Recipient__c</fullName>
    <label>Prime Recipient</label>
    <type>Text</type>
    <length>255</length>
</CustomField>