force-app/main/default/objects/Funding_Award__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><label>Active</label><default>true</default></value>
            <value><fullName>Completed</fullName><label>Completed</label><default>false</default></value>
            <value><fullName>Terminated</fullName><label>Terminated</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>