force-app/main/default/objects/Funding_Award__c/fields/Subrecipient__c.field-meta.xml
<CustomField>
    <fullName>Subrecipient__c</fullName>
    <label>Subrecipient</label>
    <type>Text</type>
    <length>255</length>
</CustomField>